Remove redundant lines from killProgram